--- a/503.html
+++ b/503.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>Home</title>
+<title>503</title>
 <meta content="Pixel Values - Pet Simulator X Values" property="og:description" />
 <meta content="https://pixel-values.pages.dev" property="og:url" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
@@ -21,7 +21,7 @@
 <div class="main">
     <body>
       <div class="topnav" id="NavTop">
-        <a class="active" href="index.html"><i class="fa-solid fa-house"></i></a>
+        <a href="index.html"><i class="fa-solid fa-house"></i></a>
         <a href="huges.html">Huges</a>
         <a href="exclusives.html">Exclusives</a>
         <a href="events.html">Event</a>
@@ -34,7 +34,7 @@
       </div>
       <br> 
       <noscript><br>Please enable JavaScript in your browser for better use of the website.</noscript>
-      Website coming soon!
+      503 Service Unavailable
     </body>
   </div>
 </div>
